--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.0",
+    "react-otp-input": "^2.4.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toggle-dark-mode": "^1.1.0",
