--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-toggle-dark-mode": "^1.1.0",
+    "react-top-loading-bar": "^2.3.1",
     "swiper": "^8.3.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11",
